docker/kubernetes/minio-nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: minio-nginx
  name: minio-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: minio-nginx
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/clowder2: "true"
        io.kompose.service: minio-nginx
    spec:
      containers:
        - image: nginx:1.19.2-alpine
          name: minio-nginx
          resources: {}
          volumeMounts:
            - mountPath: /etc/nginx/nginx.conf
              name: minio-nginx-claim0
              readOnly: true
      hostname: nginx
      restartPolicy: Always
      volumes:
        - name: minio-nginx-claim0
          persistentVolumeClaim:
            claimName: minio-nginx-claim0
            readOnly: true
status: {}
