docker/kubernetes/minio3-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: minio3
  name: minio3
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: minio3
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/clowder2: "true"
        io.kompose.service: minio3
    spec:
      containers:
        - args:
            - server
            - --console-address
            - :9001
            - http://minio{1...4}/data
          image: quay.io/minio/minio:RELEASE.2022-01-25T19-56-04Z
          livenessProbe:
            exec:
              command:
                - curl
                - -f
                - http://localhost:9000/minio/health/live
            failureThreshold: 3
            periodSeconds: 30
            timeoutSeconds: 20
          name: minio3
          resources: {}
          volumeMounts:
            - mountPath: /data
              name: data3
      hostname: minio3
      restartPolicy: Always
      volumes:
        - name: data3
          persistentVolumeClaim:
            claimName: data3
status: {}
