docker/kubernetes/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: mongo
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mongo
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/clowder2: "true"
        io.kompose.service: mongo
    spec:
      containers:
        - image: mongo:5.0
          name: mongo
          resources: {}
          volumeMounts:
            - mountPath: /data/db
              name: mongo
      restartPolicy: Always
      volumes:
        - name: mongo
          persistentVolumeClaim:
            claimName: mongo
status: {}
