docker/kubernetes/reverse-proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: reverse-proxy
  name: reverse-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: reverse-proxy
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/clowder2: "true"
        io.kompose.service: reverse-proxy
    spec:
      containers:
        - args:
            - --api.insecure=true
            - --providers.docker
          image: traefik:v2.5
          name: reverse-proxy
          ports:
            - containerPort: 80
            - containerPort: 8080
          resources: {}
          volumeMounts:
            - mountPath: /var/run/docker.sock
              name: reverse-proxy-claim0
      restartPolicy: Always
      volumes:
        - name: reverse-proxy-claim0
          persistentVolumeClaim:
            claimName: reverse-proxy-claim0
status: {}
