docker/kubernetes/reverse-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: reverse-proxy
  name: reverse-proxy
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: reverse-proxy
status:
  loadBalancer: {}
